--- a/backend/src/public/style.css
+++ b/backend/src/public/style.css
@@ -126,10 +126,12 @@ form label {
 }
 
 form input[type='text'],
+form input[type='password'],
+form input[type='number'],
 select,
 textarea {
   width: 100%;
-  padding: 8px 0;
+  padding: 8px 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
