Fixed patient login bugs

--- a/backend/src/views/inviteDoctor.handlebars
+++ b/backend/src/views/inviteDoctor.handlebars
@@ -7,10 +7,10 @@
   <label for="firstName">First Name:</label>
   <input type="text" name="firstName" required><br>
 
-  <label for="firstName">Last Name:</label>
+  <label for="lastName">Last Name:</label>
   <input type="text" name="lastName" required><br>
 
-  <label for="firstName">Email:</label>
+  <label for="email">Email:</label>
   <input type="text" name="email" required>
 
   <input type="hidden" name="inviterID" id="inviteUser" required>
