--- a/DiabetesApp/app/src/main/res/layout/activity_input_pressure_sugar.xml
+++ b/DiabetesApp/app/src/main/res/layout/activity_input_pressure_sugar.xml
@@ -27,18 +27,15 @@
         android:id="@+id/enterData"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
+        android:layout_marginStart="0dp"
         app:boxBackgroundColor="@android:color/background_light"
-        app:layout_constraintBottom_toTopOf="@id/enterData2"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9"
-        app:layout_constraintWidth_percent="0.8">
+        app:layout_constraintVertical_bias="0.8"
+        app:layout_constraintWidth_percent="0.4">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/data"
@@ -53,18 +50,15 @@
         android:id="@+id/enterData2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
+        android:layout_marginStart="0dp"
         app:boxBackgroundColor="@android:color/background_light"
-        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.95"
-        app:layout_constraintWidth_percent="0.8">
+        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
+        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintWidth_percent="0.4">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/data2"
@@ -79,13 +73,29 @@
         android:id="@+id/camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:background="@drawable/button_background_96dp"
         android:padding="20dp"
         android:src="@drawable/ic_camera_alt_white_96dp"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8" />
+
+    <ImageButton
+        android:id="@+id/camera2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_background_96dp"
+        android:padding="20dp"
+        android:src="@drawable/ic_camera_alt_white_96dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
+        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
+        app:layout_constraintVertical_bias="0.2" />
 
     <ImageButton
         android:id="@+id/done"
