--- a/Doctor_App/app/src/main/res/layout/activity_add_patient.xml
+++ b/Doctor_App/app/src/main/res/layout/activity_add_patient.xml
@@ -142,7 +142,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.100000024" />
+        app:layout_constraintVertical_bias="0.10" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout1"
